feat: publish community, communityDetail, communityCreate screen components

--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -3,6 +3,9 @@
 @import "../pc/homepage/homepage.scss";
 @import "../pc/doctors/doctors.scss";
 @import "../pc/doctors/detail.scss";
+@import "../pc/community/community.scss";
+@import "../pc/community/communityDetail.scss";
+@import "../pc/community/createArticle.scss";
 
 #pc-wrap {
   #top {
