feat: publish CS screen component

--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -6,6 +6,7 @@
 @import "../pc/community/community.scss";
 @import "../pc/community/communityDetail.scss";
 @import "../pc/community/createArticle.scss";
+@import "../pc/cs/cs.scss";
 
 #pc-wrap {
   #top {
