--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -7,6 +7,7 @@
 @import "../pc/community/communityDetail.scss";
 @import "../pc/community/createArticle.scss";
 @import "../pc/cs/cs.scss";
+@import "../pc/payment/payment.scss";
 
 #pc-wrap {
   #top {
