feat: develop withLayoutDoctor, Doctor Panel and Dashboard

--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -8,6 +8,7 @@
 @import "../pc/community/createArticle.scss";
 @import "../pc/cs/cs.scss";
 @import "../pc/payment/payment.scss";
+@import "../pc/_doctorsHome/doctorPanel.scss";
 
 #pc-wrap {
   #top {
