feat: publish Doctor's CS screen component

--- a/scss/pc/_doctorsHome/doctorPanel.scss
+++ b/scss/pc/_doctorsHome/doctorPanel.scss
@@ -1346,6 +1346,17 @@
             background-color: #f1f5f9;
           }
         }
+
+        .doctor-settings-btn {
+          &.active {
+            color: #4361ee;
+            background-color: #e0e7ff;
+
+            &:hover {
+              background-color: #dbeafe;
+            }
+          }
+        }
       }
     }
 
