--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -6,6 +6,7 @@
 @import "../pc/community/community.scss";
 @import "../pc/community/communityDetail.scss";
 @import "../pc/community/createArticle.scss";
+@import "../pc/mypage/mypage.scss";
 @import "../pc/cs/cs.scss";
 @import "../pc/payment/payment.scss";
 @import "../pc/_doctorsHome/doctorPanel.scss";
