feat: publish admin panel screen component

--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -10,6 +10,7 @@
 @import "../pc/cs/cs.scss";
 @import "../pc/payment/payment.scss";
 @import "../pc/_doctorsHome/doctorPanel.scss";
+@import "../pc/_adminHome/adminPanel.scss";
 
 #pc-wrap {
   #top {
