--- a/scss/mobile/main.scss
+++ b/scss/mobile/main.scss
@@ -157,10 +157,36 @@
             font-size: 11px;
             border-radius: 7px;
           }
+          .signup-btn {
+            padding: 6px 9px;
+            font-size: 10px;
+            border-radius: 7px;
+            border: 1px solid #cfe0ff;
+            color: #2563eb;
+            background: #fff;
+          }
 
-          .default-user,
-          .login-user {
+          .default-user {
             display: none;
+          }
+
+          .login-user {
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            border: 2px solid #e8ecef;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            overflow: hidden;
+
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              border-radius: 50%;
+            }
           }
         }
       }
